# totp-storage

./: .env.example  .gitattributes  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
.git-crypt/keys/default/0/: 2CAEDAC9F4D0D51EC47EC539E3D72063930F9F05.gpg
.github/plan/: totp-instructions.md
app/: layout.tsx  page.tsx
app/api/totp/: route.ts
components/: turnstile.tsx
components/totp/: index.ts
components/totp/form/: index.tsx  qr-code-image.tsx  qr-code-uploader.tsx
components/totp/hooks/: form.ts  get-totp.ts
components/totp/list/: column.tsx  index.tsx  otp.tsx  search.tsx
components/totp/providers/: totp-context.tsx
lib/: config.ts  utils.ts
lib/entities/: totp.ts
lib/server/providers/prisma/: index.ts
lib/server/totp/: totp.db.ts  totp.manager.ts  totp.service.ts  totp.supabase.ts
lib/services/: index.ts  otp.service.ts  public-totp.api.ts  types.d.ts
lib/supabase/: client.ts  proxy.ts  server.ts
prisma/: schema.prisma
prisma/migrations/0_init_supabase/: migration.sql
src/lib/configs/: index.ts
src/lib/entities/: totp.ts
src/lib/features/otp/: Otp.svelte  api.ts  (+5 more)
src/lib/server/: index.ts  totp-storage.service.ts
src/routes/: +layout.svelte  +page.svelte  +server.ts
static/pkg/: package.json  totp-rs-web.js
totp-rs/: Cargo.toml  LICENSE_MIT  build.sh  normalize.js
totp-rs/src/: lib.rs  lib_new.rs
wasm/totp-rs-bundler/pkg/: package.json  totp-rs-bundler.d.ts  totp-rs-bundler_bg.js  totp-rs-bundler_bg.wasm
wasm/totp-rs-web/pkg/: package.json  totp-rs-web.d.ts  totp-rs-web_bg.wasm
(+14 files in other folders)
