[package]
name = "totp-rs"
version = "0.1.0"
authors = ["xuantra"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# Base64 encoding
base64 = "0.22"

# TOTP generation
# Using sha-1 instead of ring for better WASM compatibility
sha-1 = "0.10"
hmac = "0.12"

# QR code generation
qrcode = "0.14"
image = "0.25"

# Random number generation
# Enable js feature for WASM compatibility
getrandom = { version = "0.2", features = ["js"] }

# Base32 encoding
base32 = "0.5"

# JavaScript interop
js-sys = "0.3"

# URL encoding
urlencoding = "2.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
